--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
     <div id="backdrop-root"></div>
     <div id="action-root"></div>
     <div id="overlay-root"></div>
+    <div id="menu-root"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
