--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
     <div id="action-root"></div>
     <div id="overlay-root"></div>
     <div id="menu-root"></div>
+    <div id="api-root"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
